Release 1.1-SNAPSHOT
* Added \diff command to compare results from SQL executed across 
  multiple session.
* Tab completion now recognizes the TSQL "use" statement.
* Fixed bug with way getUpdateCount() is being called that was causing
  Sybase's jConnect driver to complain.
* Updated driver definition to use the jConnect 6.x driver for Sybase
  
Release 1.0
* Tab completion now recognizes stored procedure execution requests and
  will attempt to complete parameter names and procedure names.
* Added '-i' flag to GO to allow you to generate INSERT statements from a 
  result set.
* Added support for CLOB and BLOB datatypes (bug #1820183). Current support
  requires holding the entire object in memory so be careful!
* Added $show_meta variable to display JDBC result set metadata as a separate
  result set when executing queries.
* Added $maxrows_method variable that is used to control the mechanism that
  jsqsh uses to limit row results. This added because I discovered that 
  setting the row limit in some JDBC drivers caused unwanted side effects.
* Added \procs command to display list of procedures in the current database.
* Added PL/SQL analyzer so that semicolon termination can be used against
  Oracle. 
* Added \debug command to turn on debugging for specific classes.
* The \describe command will now describe stored procedure parameters.
* Improved formatting of number datatypes (tinyint, int, short, bigint,
  float, double, etc.) to minimize the amount of space required for display
  wherever possible.
* Fixed the driver definition for the DB2 JDBC driver.
* Commands that edit or alter the current SQL buffer will also affect the
  readline history as if the user had just typed in the buffer. E.g. if you
  hit '!3' at the prompt to re-load the third oldest query, the readline
  history will look as if you just typed that query. 
* Fixed bug #1816504 - Queries returning multiple result sets were getting
  fouled.