@@ -358,7 +358,7 @@ public class SQLDriverManager {
             props.put(SQLDriver.PASSWORD_PROPERTY, s);
             
             conn = jdbcDriver.connect(url, props);
-            SQLTools.printWarnings(session.err, conn);
+            SQLTools.printWarnings(session, conn);
         }
         catch (SQLException e) {
             
@@ -380,7 +380,7 @@ public class SQLDriverManager {
             try {
                 
                 conn.setCatalog(database);
-                SQLTools.printWarnings(session.err, conn);
+                SQLTools.printWarnings(session, conn);
             }
             catch (SQLException e) {
                 
@@ -392,7 +392,7 @@ public class SQLDriverManager {
         try {
                 
             conn.setAutoCommit(defaultAutoCommit);
-            SQLTools.printWarnings(session.err, conn);
+            SQLTools.printWarnings(session, conn);
         }
         catch (SQLException e) {
             
